--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -8,9 +8,11 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "mdi": "^2.2.43",
     "nuxt": "3.0.0-rc.11"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.4.2",
     "sass": "^1.55.0",
     "vuetify": "^3.0.0-beta.13"
   }
