--- a/nuxt-app/.gitignore
+++ b/nuxt-app/.gitignore
@@ -1,8 +1,10 @@
 node_modules
-*.log*
+*.log
 .nuxt
-.nitro
-.cache
+nuxt.d.ts
 .output
-.env
-dist
+cypress/screenshots
+cypress/videos
+.yalc
+yalc.lock
+cypress/videos
