--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -8,6 +8,8 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@types/analytics-node": "^3.1.9",
+    "analytics-node": "^6.2.0",
     "mdi": "^2.2.43",
     "nuxt": "3.0.0-rc.11"
   },
