--- a/nuxt-app/.gitignore
+++ b/nuxt-app/.gitignore
@@ -1,10 +1,12 @@
 node_modules
 *.log
 .nuxt
-nuxt.d.ts
+*.d.ts
 .output
 cypress/screenshots
 cypress/videos
 .yalc
 yalc.lock
 cypress/videos
+.env
+static
