--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.2",
+    "buffer": "^6.0.3",
     "sass": "^1.55.0",
     "vuetify": "^3.0.0-beta.13"
   }
