--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -15,6 +15,6 @@
     "@pinia/nuxt": "^0.4.2",
     "buffer": "^6.0.3",
     "sass": "^1.55.0",
-    "vuetify": "^3.0.0-beta.14"
+    "vuetify": "^3.0.0"
   }
 }
