--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "build": "nuxt build -c ./nuxt.config.js",
+    "build": "node_modules/nuxt/bin/nuxt.js build -c ./nuxt.config.js",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
