--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -7,13 +7,11 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
-  "devDependencies": {
-    "mdi": "^2.2.43",
-    "nuxt": "3.0.0-rc.11"
-  },
   "dependencies": {
     "@pinia/nuxt": "^0.4.2",
     "buffer": "^6.0.3",
+    "mdi": "^2.2.43",
+    "nuxt": "^3.0.0",
     "sass": "^1.55.0",
     "vuetify": "^3.0.0"
   }
