--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -9,10 +9,11 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@pinia/nuxt": "^0.4.2",
+    "@pinia/nuxt": "^0.4.6",
     "buffer": "^6.0.3",
     "mdi": "^2.2.43",
     "nuxt": "^3.0.0",
+    "pinia": "^2.0.27",
     "sass": "^1.55.0",
     "vuetify": "^3.0.0"
   }
