--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.6",
+    "analytics-node": "^6.2.0",
     "buffer": "^6.0.3",
     "mdi": "^2.2.43",
     "nuxt": "^3.0.0",
