--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -16,6 +16,9 @@
     "nuxt": "^3.0.0",
     "pinia": "^2.0.27",
     "sass": "^1.55.0",
-    "vuetify": "^3.0.0"
+    "vuetify": "^3.1.2"
+  },
+  "devDependencies": {
+    "@nuxtjs/supabase": "^0.3.0"
   }
 }
