--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -15,6 +15,7 @@
     "buffer": "^6.0.3",
     "mdi": "^2.2.43",
     "nuxt": "^3.0.0",
+    "openai": "^4.19.0",
     "pinia": "^2.0.27",
     "sass": "^1.55.0",
     "uuid": "^9.0.0",
