--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -13,6 +13,7 @@
     "@segment/analytics-next": "^1.47.1",
     "@segment/analytics-node": "^1.1.3",
     "buffer": "^6.0.3",
+    "js-tiktoken": "^1.0.8",
     "mdi": "^2.2.43",
     "nuxt": "^3.0.0",
     "openai": "^4.19.0",
