--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -15,11 +15,11 @@
     "buffer": "^6.0.3",
     "js-tiktoken": "^1.0.8",
     "mdi": "^2.2.43",
-    "nuxt": "^3.8.0",
+    "nuxt": "3.5.0",
     "openai": "^4.19.0",
     "pinia": "^2.0.27",
     "sass": "^1.55.0",
     "uuid": "^9.0.0",
-    "vuetify": "3.1.2"
+    "vuetify": "^3.4.3"
   }
 }
