--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -9,13 +9,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@pinia/nuxt": "^0.4.6",
+    "@pinia/nuxt": "^0.5.1",
     "@segment/analytics-next": "^1.47.1",
     "@segment/analytics-node": "^1.1.3",
     "buffer": "^6.0.3",
     "js-tiktoken": "^1.0.8",
     "mdi": "^2.2.43",
-    "nuxt": "3.7.0",
+    "nuxt": "^3.7.0",
     "openai": "^4.19.0",
     "pinia": "^2.0.27",
     "sass": "^1.55.0",
