--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -14,7 +14,7 @@
     "@segment/analytics-node": "^1.1.3",
     "buffer": "^6.0.3",
     "js-tiktoken": "^1.0.8",
-    "mdi": "^2.2.43",
+    "@mdi/font": "^2.2.43",
     "nuxt": "^3.8.0",
     "openai": "^4.19.0",
     "pinia": "^2.1.0",
