--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -10,16 +10,17 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
-    "@segment/analytics-next": "^1.47.1",
-    "@segment/analytics-node": "^1.1.3",
+    "@segment/analytics-next": "^1.62.0",
+    "@segment/analytics-node": "^1.1.4",
     "buffer": "^6.0.3",
-    "js-tiktoken": "^1.0.8",
-    "@mdi/font": "^2.2.43",
-    "nuxt": "^3.8.0",
+    "nuxt": "^3.9.0",
     "openai": "^4.19.0",
-    "pinia": "^2.1.0",
+    "pinia": "^2.1.7",
     "sass": "^1.55.0",
     "uuid": "^9.0.0",
-    "vuetify": "^3.4.3"
+    "vuetify": "^3.4.8"
+  },
+  "devDependencies": {
+    "@mdi/font": "^7.4.47"
   }
 }
